# sfi-web

./: Cargo.toml  README.md  index.html
src/: lib.rs  types.rs
src/components/: app.rs  debug_tools.rs  home.rs  login.rs  login_demo.rs  mod.rs  settings.rs  toolbar.rs
src/components/core/: create_inventory.rs  create_item.rs  inventories.rs  inventory_card.rs  item_card.rs  items.rs  mod.rs  unit_card.rs  units.rs  update_inventory.rs  update_item.rs
src/constants/: css.rs  license.rs  meta.rs  mod.rs
src/css/: main.css
src/services/: auth.rs  data.rs
